--- a/faq.html
+++ b/faq.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>About - Kent Bond Group</title>
+  <title>FAQ - Tom Mills</title>
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
 
@@ -45,7 +45,7 @@
 
 Q: Are there any upfront fees? 
 
-A: Absolutely NOT, Kent Bond Group will never ask you for a penny. The actual process does require many hours of labour, attorney fees and administrative costs, ongoing governmental audits, filing claims, legal opinion letters, and much more. This all comes out of our pocket until we successfully obtain a refund for you, we only only receive a portion of the money that we recover for you AFTER all the work is done. 
+A: Absolutely NOT, Tom Mills will never ask you for a penny. The actual process does require many hours of labour, attorney fees and administrative costs, ongoing governmental audits, filing claims, legal opinion letters, and much more. This all comes out of our pocket until we successfully obtain a refund for you, we only only receive a portion of the money that we recover for you AFTER all the work is done. 
 
 Q: How soon can I get my Refund?
 
@@ -73,7 +73,7 @@ We believe in open communication and building relationships with our clients, we
     <div class="container">
 
       <div class="logo float-left">
-        <h1 class="text-light"><a href="index.html"><span>Kent Bond Group</span></a></h1>
+        <h1 class="text-light"><a href="index.html"><span>Tom Mills</span></a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
       </div>
@@ -83,7 +83,6 @@ We believe in open communication and building relationships with our clients, we
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About Us</a></li>
           <li><a href="services.html">How Does This Work?</a></li>
-          <li><a href="team.html">Team</a></li>
           <li class="active"><a href="faq.html">FAQ</a></li>
           <li><a href="contact.html">Contact Us</a></li>
         </ul>
@@ -119,7 +118,7 @@ We believe in open communication and building relationships with our clients, we
           <div class="col-md-12 col-lg-12 d-flex align-items-stretch" data-aos="fade-up">
             <div class="icon-box icon-box-pink">
               <h4 class="title"><a href="">Are there any upfront fees?</a></h4>
-              <p class="description">Absolutely NOT, Kent Bond Group will never ask you for a penny. The actual process does require many hours of labour, attorney fees and administrative costs, ongoing governmental audits, filing claims, legal opinion letters, and much more. This all comes out of our pocket until we successfully obtain a refund for you, we only receive a portion of the money that we recover for you AFTER all the work is done.</p>
+              <p class="description">Absolutely NOT, Tom Mills will never ask you for a penny. The actual process does require many hours of labour, attorney fees and administrative costs, ongoing governmental audits, filing claims, legal opinion letters, and much more. This all comes out of our pocket until we successfully obtain a refund for you, we only receive a portion of the money that we recover for you AFTER all the work is done.</p>
             </div>
           </div>
                     <div class="col-md-12 col-lg-12 d-flex align-items-stretch" data-aos="fade-up">
@@ -138,13 +137,13 @@ However, you can absolutely do all the work, research, filing, attorney fees, cl
                     <div class="col-md-12 col-lg-12 d-flex align-items-stretch" data-aos="fade-up">
             <div class="icon-box icon-box-pink">
               <h4 class="title"><a href="">How did you find me and my contact information?</a></h4>
-              <p class="description">Kent Bond Group is in the business of helping people collect funds that they did not know was owed to them, our company is extremely sophisticated in finding these funds and also the people that they legally belong to.</p>
+              <p class="description">Tom Mills is in the business of helping people collect funds that they did not know was owed to them, our company is extremely sophisticated in finding these funds and also the people that they legally belong to.</p>
             </div>
           </div>
                     <div class="col-md-12 col-lg-12 d-flex align-items-stretch" data-aos="fade-up">
             <div class="icon-box icon-box-pink">
               <h4 class="title"><a href="">How do we get started?</a></h4>
-              <p class="description">Reach out to Kent Bond Group and we will discuss your claim in more detail and send the required paperwork out to you to be signed. We by law are required to have a Licensed, Insured and Bonded Notary Public complete the paper work with you. Once we receive all the paperwork back, then we will put your claim package together and file it with the proper agency within 48 hours.  We will keep you informed throughout the entire process until the money is in your hands. 
+              <p class="description">Reach out to Tom Mills and we will discuss your claim in more detail and send the required paperwork out to you to be signed. We by law are required to have a Licensed, Insured and Bonded Notary Public complete the paper work with you. Once we receive all the paperwork back, then we will put your claim package together and file it with the proper agency within 48 hours.  We will keep you informed throughout the entire process until the money is in your hands. 
 <br>
 We believe in open communication and building relationships with our clients, we will always make ourselves available for you, you will have your representative's cell phone number and email address so you can call, text and email anytime.</p>
             </div>
@@ -176,18 +175,18 @@ We believe in open communication and building relationships with our clients, we
           <div class="col-lg-4 col-md-6 footer-contact">
             <h4>Contact Us</h4>
             <p>
-              5109 Bonneville Bend <br>
-              Austin, TX 78744<br>
+              Dowling Park <br>
+              FL, 32064<br>
               United States <br><br>
-              <strong>Phone:</strong> 737-263-8101<br>
-              <strong>Email:</strong> duncan@kentbondgroup.com<br>
+              <strong>Phone:</strong> (808) 280-5524<br>
+              <strong>Email:</strong> tom@surplusrecovertservices.online<br>
             </p>
 
           </div>
 
           <div class="col-lg-4 col-md-6 footer-info">
-            <h3>About Kent Bond Group</h3>
-            <p>The Kent Bond Group specializes in locating and recovering possible funds remaining after a property foreclosure sale. We audit legal foreclosure documents and hundreds of government agencies throughout the entire country to find these funds.</p>
+            <h3>About Tom Mills</h3>
+            <p>Tom Mills specializes in locating and recovering possible funds remaining after a property foreclosure sale. We audit legal foreclosure documents and hundreds of government agencies throughout the entire country to find these funds.</p>
             <div class="social-links mt-3">
               <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
               <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
@@ -202,7 +201,7 @@ We believe in open communication and building relationships with our clients, we
 
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>Kent Bond Group</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>Tom Mills</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
