--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>About - Kent Bond Group</title>
+  <title>About - Tom Mills</title>
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
 
@@ -43,7 +43,7 @@
     <div class="container">
 
       <div class="logo float-left">
-        <h1 class="text-light"><a href="index.html"><span>Kent Bond Group</span></a></h1>
+        <h1 class="text-light"><a href="index.html"><span>Tom Mills</span></a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
       </div>
@@ -53,7 +53,6 @@
           <li><a href="index.html">Home</a></li>
           <li class="active"><a href="about.html">About Us</a></li>
           <li><a href="services.html">How Does This Work?</a></li>
-          <li><a href="team.html">Team</a></li>
           <li><a href="faq.html">FAQ</a></li>
           <li><a href="contact.html">Contact Us</a></li>
         </ul>
@@ -88,58 +87,61 @@
             <img src="assets/img/family.png" class="img-fluid" alt="">
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0">
-            <h3>The Kent Bond Group</h3>
+            <h3>Tom Mills</h3>
             <br>
             <p>
-              The Kent Bond Group specializes in locating and recovering possible funds remaining after a property foreclosure sale. We audit legal foreclosure documents and hundreds of government agencies throughout the entire country to find these funds. We then notify the rightful owners and help them to claim this money, as the claim process can be extremely difficult and time consuming.
-<br><br>
-Kent Bond Group is a family run business that has extensive knowledge in Real Estate, and the Foreclosure process, we take pride in helping other families receive what legally belongs to them.
-<br><br>
-We do all the work from start to finish for the claim process. We always work on a contingency basis which means there are no upfront fees and we only charge a fee if and when we are successful. All costs and fees, including attorney’s fees, are paid from our company’s percentage of reclaimed money, with the client getting the largest share. If the claim is unsuccessful, which is very rare, the client owes us nothing. It’s Completely risk free.
-            </p>
-          </div>
-        </div>
+	Hello, My name is Tom Mills and I have been in the Real Estate Industry for more years than I can count. I have been associated in all areas of the Industry such as Sales, Listing, Mortgages, Foreclosures Tax Sales, also I have worked in the Total Insurance Profession and I know that industries first hand.
+	<br/>
+	This is why I will work for you above and beyond your expectations. <br/>
+	I will be in your corner 100% until the process is completed. I look forward to working with and for you. Please remember, I only get paid if you get paid and I pay the total money expenses, you pay nothing for our success. <br/>
+	Let’s work together and rescue the monies you are so rightfully owed by our government.<br/> <br/>
+	Regards,<br/>
+Thomas (Tom) Foster Mills
+	    
+	    </p>
+		  </div>
+		</div>
 
-      </div>
-    </section><!-- End About Section -->
+	      </div>
+	    </section><!-- End About Section -->
 
-    <!-- ======= Facts Section ======= -->
+	    <!-- ======= Facts Section ======= -->
 
-    <!-- ======= Tetstimonials Section ======= -->
-  </main><!-- End #main -->
+	    <!-- ======= Tetstimonials Section ======= -->
+	  </main><!-- End #main -->
 
-  <!-- ======= Footer ======= -->
-    <footer id="footer" data-aos="fade-up" data-aos-easing="ease-in-out" data-aos-duration="500">
+	  <!-- ======= Footer ======= -->
+	    <footer id="footer" data-aos="fade-up" data-aos-easing="ease-in-out" data-aos-duration="500">
 
-        <div class="footer-top">
-      <div class="container">
-        <div class="row">
+		<div class="footer-top">
+	      <div class="container">
+		<div class="row">
 
-          <div class="col-lg-4 col-md-6 footer-links">
-            <h4>Useful Links</h4>
-            <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="index.html">Home</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="about.html">About us</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="services.html">How Does This Work?</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="faq.html">FAQ</a></li>
-            </ul>
-          </div>
+		  <div class="col-lg-4 col-md-6 footer-links">
+		    <h4>Useful Links</h4>
+		    <ul>
+		      <li><i class="bx bx-chevron-right"></i> <a href="index.html">Home</a></li>
+		      <li><i class="bx bx-chevron-right"></i> <a href="about.html">About us</a></li>
+		      <li><i class="bx bx-chevron-right"></i> <a href="services.html">How Does This Work?</a></li>
+		      <li><i class="bx bx-chevron-right"></i> <a href="faq.html">FAQ</a></li>
+		    </ul>
+		  </div>
 
-          <div class="col-lg-4 col-md-6 footer-contact">
-            <h4>Contact Us</h4>
-            <p>
-              5109 Bonneville Bend <br>
-              Austin, TX 78744<br>
-              United States <br><br>
-              <strong>Phone:</strong> 737-263-8101<br>
-              <strong>Email:</strong> duncan@kentbondgroup.com<br>
+		  <div class="col-lg-4 col-md-6 footer-contact">
+		    <h4>Contact Us</h4>
+		    <p>
+		      Dowling Park <br>
+		      FL, 32064<br>
+		      United States <br><br>
+		      <strong>Phone:</strong> (808) 280-5524<br>
+		      <strong>Email:</strong> tom@surplusrecovertservices.online<br>
             </p>
 
           </div>
 
           <div class="col-lg-4 col-md-6 footer-info">
-            <h3>About Kent Bond Group</h3>
-            <p>The Kent Bond Group specializes in locating and recovering possible funds remaining after a property foreclosure sale. We audit legal foreclosure documents and hundreds of government agencies throughout the entire country to find these funds.</p>
+            <h3>About Tom Mills</h3>
+            <p>Tom Mills specializes in locating and recovering possible funds remaining after a property foreclosure sale. We audit legal foreclosure documents and hundreds of government agencies throughout the entire country to find these funds.</p>
             <div class="social-links mt-3">
               <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
               <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
@@ -154,7 +156,7 @@ We do all the work from start to finish for the claim process. We always work on
 
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>Kent Bond Group</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>Tom Mills</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
