--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Contact - Kent Bond Group</title>
+  <title>Contact - Tom Mills</title>
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
 
@@ -43,7 +43,7 @@
     <div class="container">
 
       <div class="logo float-left">
-        <h1 class="text-light"><a href="index.html"><span>Kent Bond Group</span></a></h1>
+        <h1 class="text-light"><a href="index.html"><span>Tom Mills</span></a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
       </div>
@@ -53,7 +53,6 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About Us</a></li>
           <li><a href="services.html">How Does This Work?</a></li>
-          <li><a href="team.html">Team</a></li>
           <li><a href="faq.html">FAQ</a></li>
           <li class="active"><a href="contact.html">Contact Us</a></li>
         </ul>
@@ -92,21 +91,21 @@
                 <div class="info-box">
                   <i class="bx bx-map"></i>
                   <h3>Our Address</h3>
-                  <p>5109 Bonneville Bend, Austin, TX 78744</p>
+                  <p>Dowling Park, FL 32064</p>
                 </div>
               </div>
               <div class="col-md-6">
                 <div class="info-box">
                   <i class="bx bx-envelope"></i>
                   <h3>Email Us</h3>
-                  <p>duncan@kentbondgroup.com</p>
+                  <p>tom@surplusrecovertservices.online</p>
                 </div>
               </div>
               <div class="col-md-6">
                 <div class="info-box">
                   <i class="bx bx-phone-call"></i>
                   <h3>Call Us</h3>
-                  <p>737-263-8101</p>
+                  <p>(808) 280-5524</p>
                 </div>
               </div>
             </div>
@@ -120,11 +119,6 @@
     </section><!-- End Contact Section -->
 
     <!-- ======= Map Section ======= -->
-    <section class="map mt-2">
-      <div class="container-fluid p-0">
-        <iframe src="https://maps.google.com/maps?q=5109%20Bonneville%20Bend%2C%20Austin%2C%20TX%2078744&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
-      </div>
-    </section><!-- End Map Section -->
 
   </main><!-- End #main -->
 
@@ -148,18 +142,18 @@
           <div class="col-lg-4 col-md-6 footer-contact">
             <h4>Contact Us</h4>
             <p>
-              5109 Bonneville Bend <br>
-              Austin, TX 78744<br>
+              Dowling Park <br>
+              FL, 32064<br>
               United States <br><br>
-              <strong>Phone:</strong> 737-263-8101<br>
-              <strong>Email:</strong> duncan@kentbondgroup.com<br>
+              <strong>Phone:</strong> (808) 280-5524<br>
+              <strong>Email:</strong> tom@surplusrecoveryservices.online<br>
             </p>
 
           </div>
 
           <div class="col-lg-4 col-md-6 footer-info">
-            <h3>About Kent Bond Group</h3>
-            <p>The Kent Bond Group specializes in locating and recovering possible funds remaining after a property foreclosure sale. We audit legal foreclosure documents and hundreds of government agencies throughout the entire country to find these funds.</p>
+            <h3>Tom Mills</h3>
+            <p>Tom Mills specializes in locating and recovering possible funds remaining after a property foreclosure sale. We audit legal foreclosure documents and hundreds of government agencies throughout the entire country to find these funds.</p>
             <div class="social-links mt-3">
               <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
               <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
@@ -174,7 +168,7 @@
 
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>Kent Bond Group</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>Tom Mills</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
