--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Kent Bond Group</title>
+  <title>Tom Mills</title>
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
 
@@ -53,7 +53,6 @@
           <li class="active"><a href="index.html">Home</a></li>
           <li><a href="about.html">About Us</a></li>
           <li><a href="services.html">How Does This Work?</a></li>
-          <li><a href="team.html">Team</a></li>
           <li><a href="faq.html">FAQ</a></li>
           <li><a href="contact.html">Contact Us</a></li>
         </ul>
@@ -74,9 +73,9 @@
           
 
           <!-- <h2 class="animate__animated animate__fadeInDown">Welcome to <span>Moderna</span></h2> -->
-          <img src="https://i.ibb.co/vPrx4xX/Kent-Bond-logo-White-text-cut.png" class="img-fluid animate__animated animate__fadeInDown" alt="">
-          <br>
-          <p class="animate__animated animate__fadeInUp">The Kent Bond Group specializes in locating and recovering possible funds remaining after a property foreclosure sale. We audit legal foreclosure documents and hundreds of government agencies throughout the entire country to find these funds.</p>
+	  <img src="https://i.ibb.co/4fY6n7M/kent-logo2.png" class="img-fluid animate__animated animate__fadeInDown" alt="">
+	  <br/>
+          <p class="animate__animated animate__fadeInUp">Tom Mills specializes in locating and recovering possible funds remaining after a property foreclosure sale. We audit legal foreclosure documents and hundreds of government agencies throughout the entire country to find these funds.</p>
           <a href="#anchor-test" class="btn-get-started animate__animated animate__fadeInUp">Read More</a>
         </div>
       </div>
@@ -211,18 +210,18 @@ The government agency requires authorization for us to work on your behalf to cl
           <div class="col-lg-4 col-md-6 footer-contact">
             <h4>Contact Us</h4>
             <p>
-              5109 Bonneville Bend <br>
-              Austin, TX 78744<br>
+              Dowling Park <br>
+              FL, 32064<br>
               United States <br><br>
-              <strong>Phone:</strong> 737-263-8101<br>
-              <strong>Email:</strong> duncan@kentbondgroup.com<br>
+              <strong>Phone:</strong> (808) 280-5524<br>
+              <strong>Email:</strong> tom@surplusrecovertservices.online<br>
             </p>
 
           </div>
 
           <div class="col-lg-4 col-md-6 footer-info">
-            <h3>About Kent Bond Group</h3>
-            <p>The Kent Bond Group specializes in locating and recovering possible funds remaining after a property foreclosure sale. We audit legal foreclosure documents and hundreds of government agencies throughout the entire country to find these funds.</p>
+            <h3>About Tom Mills</h3>
+            <p>Tom Mills specializes in locating and recovering possible funds remaining after a property foreclosure sale. We audit legal foreclosure documents and hundreds of government agencies throughout the entire country to find these funds.</p>
             <div class="social-links mt-3">
               <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
               <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
@@ -237,7 +236,7 @@ The government agency requires authorization for us to work on your behalf to cl
 
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>Kent Bond Group</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>Tom Mills</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
