--- a/services.html
+++ b/services.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Services - Kent Bond Group</title>
+  <title>Services - Tom Mills</title>
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
 
@@ -43,7 +43,7 @@
     <div class="container">
 
       <div class="logo float-left">
-        <h1 class="text-light"><a href="index.html"><span>Kent Bond Group</span></a></h1>
+        <h1 class="text-light"><a href="index.html"><span>Tom Mills</span></a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
       </div>
@@ -53,7 +53,6 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About Us</a></li>
           <li class="active"><a href="services.html">How Does This Work?</a></li>
-          <li><a href="team.html">Team</a></li>
           <li><a href="faq.html">FAQ</a></li>
           <li><a href="contact.html">Contact Us</a></li>
         </ul>
@@ -89,7 +88,7 @@
           <p>Many homeowners are unaware that they are entitled to cash refunds from their foreclosed property after a foreclosure auction has taken place. Foreclosure Refunds are the result of foreclosure auctions that happen after a property is foreclosed because of an unpaid mortgage loan or Property tax. The lender or the Government then puts it up for auction and then the property is sold to the highest bidder.
 The difference of the unpaid balance and selling price of a foreclosed property should be awarded to the prior most recent owner of the property by Law.
 <br><br>
-Because of procedural technicalities, filing for possible refunds is complicated, especially when there are other entities that also have claims to the property. Working with The Kent Bond team allows you to consult with professionals who have a track record in processing surplus fund claims and obtaining the best possible outcome for you and your family.</p>
+Because of procedural technicalities, filing for possible refunds is complicated, especially when there are other entities that also have claims to the property. Working with Tom Mills allows you to consult with professionals who have a track record in processing surplus fund claims and obtaining the best possible outcome for you and your family.</p>
         </div>
 
         
@@ -138,18 +137,18 @@ Because of procedural technicalities, filing for possible refunds is complicated
           <div class="col-lg-4 col-md-6 footer-contact">
             <h4>Contact Us</h4>
             <p>
-              5109 Bonneville Bend <br>
-              Austin, TX 78744<br>
+              Dowling Park <br>
+              FL, 32064<br>
               United States <br><br>
-              <strong>Phone:</strong> 737-263-8101<br>
-              <strong>Email:</strong> duncan@kentbondgroup.com<br>
+              <strong>Phone:</strong> (808) 280-5524<br>
+              <strong>Email:</strong> tom@surplusrecovertservices.online<br>
             </p>
 
           </div>
 
           <div class="col-lg-4 col-md-6 footer-info">
-            <h3>About Kent Bond Group</h3>
-            <p>The Kent Bond Group specializes in locating and recovering possible funds remaining after a property foreclosure sale. We audit legal foreclosure documents and hundreds of government agencies throughout the entire country to find these funds.</p>
+            <h3>About Tom Mills</h3>
+            <p>Tom Mills specializes in locating and recovering possible funds remaining after a property foreclosure sale. We audit legal foreclosure documents and hundreds of government agencies throughout the entire country to find these funds.</p>
             <div class="social-links mt-3">
               <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
               <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
@@ -164,7 +163,7 @@ Because of procedural technicalities, filing for possible refunds is complicated
 
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>Kent Bond Group</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>Tom Mills</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
