--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           
 
           <!-- <h2 class="animate__animated animate__fadeInDown">Welcome to <span>Moderna</span></h2> -->
-	  <img src="https://i.ibb.co/4fY6n7M/kent-logo2.png" class="img-fluid animate__animated animate__fadeInDown" alt="">
+	  <img src="assets/img/kent-logo2.png" class="img-fluid animate__animated animate__fadeInDown" alt="" style="width: 100%; max-width: 400px; height: auto;">
 	  <br/>
           <p class="animate__animated animate__fadeInUp">Tom Mills specializes in locating and recovering possible funds remaining after a property foreclosure sale. We audit legal foreclosure documents and hundreds of government agencies throughout the entire country to find these funds.</p>
           <a href="#anchor-test" class="btn-get-started animate__animated animate__fadeInUp">Read More</a>
