--- a/about.html
+++ b/about.html
@@ -134,7 +134,7 @@ Thomas (Tom) Foster Mills
 		      FL, 32064<br>
 		      United States <br><br>
 		      <strong>Phone:</strong> (808) 280-5524<br>
-		      <strong>Email:</strong> tom@surplusrecovertservices.online<br>
+		      <strong>Email:</strong> tom@surplusrecoveryservices.online<br>
             </p>
 
           </div>
