--- a/contact.html
+++ b/contact.html
@@ -98,7 +98,7 @@
                 <div class="info-box">
                   <i class="bx bx-envelope"></i>
                   <h3>Email Us</h3>
-                  <p>tom@surplusrecovertservices.online</p>
+                  <p>tom@surplusrecoveryservices.online</p>
                 </div>
               </div>
               <div class="col-md-6">
