--- a/faq.html
+++ b/faq.html
@@ -179,7 +179,7 @@ We believe in open communication and building relationships with our clients, we
               FL, 32064<br>
               United States <br><br>
               <strong>Phone:</strong> (808) 280-5524<br>
-              <strong>Email:</strong> tom@surplusrecovertservices.online<br>
+              <strong>Email:</strong> tom@surplusrecoveryservices.online<br>
             </p>
 
           </div>
