--- a/services.html
+++ b/services.html
@@ -141,7 +141,7 @@ Because of procedural technicalities, filing for possible refunds is complicated
               FL, 32064<br>
               United States <br><br>
               <strong>Phone:</strong> (808) 280-5524<br>
-              <strong>Email:</strong> tom@surplusrecovertservices.online<br>
+              <strong>Email:</strong> tom@surplusrecoveryservices.online<br>
             </p>
 
           </div>
