--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@ The government agency requires authorization for us to work on your behalf to cl
               FL, 32064<br>
               United States <br><br>
               <strong>Phone:</strong> (808) 280-5524<br>
-              <strong>Email:</strong> tom@surplusrecovertservices.online<br>
+              <strong>Email:</strong> tom@surplusrecoveryservices.online<br>
             </p>
 
           </div>
