--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>About - Tom Mills</title>
+  <title>About - Surplus Recovery Services</title>
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
 
@@ -43,7 +43,7 @@
     <div class="container">
 
       <div class="logo float-left">
-        <h1 class="text-light"><a href="index.html"><span>Tom Mills</span></a></h1>
+        <h1 class="text-light"><a href="index.html"><span>Surplus Recovery Services</span></a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
       </div>
@@ -90,9 +90,12 @@
             <h3>Tom Mills</h3>
             <br>
             <p>
-	Hello, My name is Tom Mills and I have been in the Real Estate Industry for more years than I can count. I have been associated in all areas of the Industry such as Sales, Listing, Mortgages, Foreclosures Tax Sales, also I have worked in the Total Insurance Profession and I know that industries first hand.
-	<br/>
-	This is why I will work for you above and beyond your expectations. <br/>
+	Hello, My name is Tom Mills and I have been in the Real Estate
+	Industry for more years than I can count. I have been associated
+	in all areas of the Industry such as Sales, Mortgages &
+	Foreclosures Tax Sales, also I have worked for many years as an
+	Insurance Professional and I know that industry first hand. This is why I will work for you above and beyond your
+	expectations.<br/> <br/>
 	I will be in your corner 100% until the process is completed. I look forward to working with and for you. Please remember, I only get paid if you get paid and I pay the total money expenses, you pay nothing for our success. <br/>
 	Let’s work together and rescue the monies you are so rightfully owed by our government.<br/> <br/>
 	Regards,<br/>
@@ -140,8 +143,8 @@ Thomas (Tom) Foster Mills
           </div>
 
           <div class="col-lg-4 col-md-6 footer-info">
-            <h3>About Tom Mills</h3>
-            <p>Tom Mills specializes in locating and recovering possible funds remaining after a property foreclosure sale. We audit legal foreclosure documents and hundreds of government agencies throughout the entire country to find these funds.</p>
+            <h3>About Surplus Recovery Service</h3>
+            <p>Surplus Recovery Service specializes in locating and recovering possible funds remaining after a property foreclosure sale. We audit legal foreclosure documents and hundreds of government agencies throughout the entire country to find these funds.</p>
             <div class="social-links mt-3">
               <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
               <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
@@ -156,7 +159,7 @@ Thomas (Tom) Foster Mills
 
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>Tom Mills</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>Surplus Recovery Services</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
