--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Contact - Tom Mills</title>
+  <title>Contact - Surplus Recovery Services</title>
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
 
@@ -43,7 +43,7 @@
     <div class="container">
 
       <div class="logo float-left">
-        <h1 class="text-light"><a href="index.html"><span>Tom Mills</span></a></h1>
+        <h1 class="text-light"><a href="index.html"><span>Surplus Recovery Services</span></a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
       </div>
@@ -152,8 +152,8 @@
           </div>
 
           <div class="col-lg-4 col-md-6 footer-info">
-            <h3>Tom Mills</h3>
-            <p>Tom Mills specializes in locating and recovering possible funds remaining after a property foreclosure sale. We audit legal foreclosure documents and hundreds of government agencies throughout the entire country to find these funds.</p>
+            <h3>Surplus Recovery Services</h3>
+            <p>Surplus Recovery Service specializes in locating and recovering possible funds remaining after a property foreclosure sale. We audit legal foreclosure documents and hundreds of government agencies throughout the entire country to find these funds.</p>
             <div class="social-links mt-3">
               <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
               <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
@@ -168,7 +168,7 @@
 
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>Tom Mills</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>Surplus Recovery Services</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
