--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Tom Mills</title>
+  <title>Surplus Recovery Services</title>
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
 
@@ -75,7 +75,7 @@
           <!-- <h2 class="animate__animated animate__fadeInDown">Welcome to <span>Moderna</span></h2> -->
 	  <img src="assets/img/kent-logo2.png" class="img-fluid animate__animated animate__fadeInDown" alt="" style="width: 100%; max-width: 400px; height: auto;">
 	  <br/>
-          <p class="animate__animated animate__fadeInUp">Tom Mills specializes in locating and recovering possible funds remaining after a property foreclosure sale. We audit legal foreclosure documents and hundreds of government agencies throughout the entire country to find these funds.</p>
+          <p class="animate__animated animate__fadeInUp">Surplus Recovery Services specializes in locating and recovering possible funds remaining after a property foreclosure sale. We audit legal foreclosure documents and hundreds of government agencies throughout the entire country to find these funds.</p>
           <a href="#anchor-test" class="btn-get-started animate__animated animate__fadeInUp">Read More</a>
         </div>
       </div>
@@ -220,8 +220,8 @@ The government agency requires authorization for us to work on your behalf to cl
           </div>
 
           <div class="col-lg-4 col-md-6 footer-info">
-            <h3>About Tom Mills</h3>
-            <p>Tom Mills specializes in locating and recovering possible funds remaining after a property foreclosure sale. We audit legal foreclosure documents and hundreds of government agencies throughout the entire country to find these funds.</p>
+            <h3>About Surplus Recovery Services</h3>
+            <p>Surplus Recovery Service specializes in locating and recovering possible funds remaining after a property foreclosure sale. We audit legal foreclosure documents and hundreds of government agencies throughout the entire country to find these funds.</p>
             <div class="social-links mt-3">
               <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
               <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
@@ -236,7 +236,7 @@ The government agency requires authorization for us to work on your behalf to cl
 
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>Tom Mills</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>Surplus Recovery Services</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
