--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 
         <div class="section-title">
           <h2>Claim Documents</h2>
-          <p>This is a brief explanation of each document we use in the claim process and its purpose. If you have any questions or concerns about these documents or the claim process itself, please contact us at duncan@kentbondgroup.com</p><br>
+	  <p>This is a brief explanation of each document we use in the claim process and its purpose. If you have any questions or concerns about these documents or the claim process itself, please contact us at <a href = "mailto: tom@surplusrecoveryservices.online">tom@surplusrecoveryservices.online</a></p><br>
         </div>
 
         <div class="row" data-aos="fade-up">
@@ -214,7 +214,7 @@ The government agency requires authorization for us to work on your behalf to cl
               FL, 32064<br>
               United States <br><br>
               <strong>Phone:</strong> (808) 280-5524<br>
-              <strong>Email:</strong> tom@surplusrecoveryservices.online<br>
+              <strong>Email:</strong> <a href = "mailto: tom@surplusrecoveryservices.online">tom@surplusrecoveryservices.online</a><br>
             </p>
 
           </div>
