--- a/contact.html
+++ b/contact.html
@@ -98,7 +98,7 @@
                 <div class="info-box">
                   <i class="bx bx-envelope"></i>
                   <h3>Email Us</h3>
-                  <p>tom@surplusrecoveryservices.online</p>
+                  <p><a href = "mailto: tom@surplusrecoveryservices.online">tom@surplusrecoveryservices.online</a></p>
                 </div>
               </div>
               <div class="col-md-6">
@@ -146,7 +146,7 @@
               FL, 32064<br>
               United States <br><br>
               <strong>Phone:</strong> (808) 280-5524<br>
-              <strong>Email:</strong> tom@surplusrecoveryservices.online<br>
+              <strong>Email:</strong> <a href = "mailto: tom@surplusrecoveryservices.online">tom@surplusrecoveryservices.online</a><br>
             </p>
 
           </div>
